# Book_Management_CRUD-API

./: Cargo.toml  README.md
2022-02-19-170939_users/: down.sql
migrations/2022-02-19-170939_users/: up.sql
public/: 404.html  index.html
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  static_files.rs
