[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.1", features = ["postgres"]}
dotenv = "0.9.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0-rc1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
rocket_codegen = "0.5.0-rc.1"

